Created two services to operate between the grandparent, parent, and child components. The first is used to invert the X or O text to be inserted after a user clicks, and the second is used to store the current Board history in the Game component. The board component can poll all of its children Square components using the ViewChildren decorator, and querying it after each click to determine each state.

--- a/src/app/modules/game/components/board/board.component.html
+++ b/src/app/modules/game/components/board/board.component.html
@@ -1,18 +1,18 @@
 <div>
   <div class="board-row">
-    <app-square (squareClick)="onSquareClicked($event)"></app-square>
-    <app-square (squareClick)='onSquareClicked($event)'></app-square>
-    <app-square (squareClick)='onSquareClicked($event)'></app-square>
+    <app-square name="1"></app-square>
+    <app-square name="2"></app-square>
+    <app-square name="3"></app-square>
   </div>
   <div class="board-row">
-    <app-square (squareClick)='onSquareClicked($event)'></app-square>
-    <app-square (squareClick)='onSquareClicked($event)'></app-square>
-    <app-square (squareClick)='onSquareClicked($event)'></app-square>
+    <app-square name="4"></app-square>
+    <app-square name="5"></app-square>
+    <app-square name="6"></app-square>
   </div>
   <div class="board-row">
-    <app-square (squareClick)='onSquareClicked($event)'></app-square>
-    <app-square (squareClick)='onSquareClicked($event)'></app-square>
-    <app-square (squareClick)='onSquareClicked($event)'></app-square>
+    <app-square name="7"></app-square>
+    <app-square name="8"></app-square>
+    <app-square name="9"></app-square>
   </div>
 </div>
 
