--- a/src/app/modules/game/components/game/game.component.html
+++ b/src/app/modules/game/components/game/game.component.html
@@ -1,6 +1,6 @@
 <div class="game">
     <div class="game-board">
-        <app-board [xIsNext]="history.xIsNext"></app-board>
+        <app-board></app-board>
     </div>
 </div>
 
