Final changes to the Tic-Tac-Toe application. The code is now stable and functions identically to the React version.

--- a/src/app/modules/game/components/board/board.component.html
+++ b/src/app/modules/game/components/board/board.component.html
@@ -1,18 +1,18 @@
 <div>
   <div class="board-row">
-    <app-square name="1"></app-square>
-    <app-square name="2"></app-square>
-    <app-square name="3"></app-square>
+    <app-square name="1" [squareValue]=this.selectedBoard[0]></app-square>
+    <app-square name="2" [squareValue]=this.selectedBoard[1]></app-square>
+    <app-square name="3" [squareValue]=this.selectedBoard[2]></app-square>
   </div>
   <div class="board-row">
-    <app-square name="4"></app-square>
-    <app-square name="5"></app-square>
-    <app-square name="6"></app-square>
+    <app-square name="4" [squareValue]=this.selectedBoard[3]></app-square>
+    <app-square name="5" [squareValue]=this.selectedBoard[4]></app-square>
+    <app-square name="6" [squareValue]=this.selectedBoard[5]></app-square>
   </div>
   <div class="board-row">
-    <app-square name="7"></app-square>
-    <app-square name="8"></app-square>
-    <app-square name="9"></app-square>
+    <app-square name="7" [squareValue]=this.selectedBoard[6]></app-square>
+    <app-square name="8" [squareValue]=this.selectedBoard[7]></app-square>
+    <app-square name="9" [squareValue]=this.selectedBoard[8]></app-square>
   </div>
 </div>
 
